--- a/hasura-migrations/metadata/databases/default/tables/tables.yaml
+++ b/hasura-migrations/metadata/databases/default/tables/tables.yaml
@@ -1,1 +1,8 @@
-[]
+- "!include public_answers.yaml"
+- "!include public_board_admins.yaml"
+- "!include public_boards.yaml"
+- "!include public_invites.yaml"
+- "!include public_questions.yaml"
+- "!include public_surveys.yaml"
+- "!include public_surveys_questions.yaml"
+- "!include public_users.yaml"
