--- a/hasura-migrations/metadata/databases/default/tables/public_answers.yaml
+++ b/hasura-migrations/metadata/databases/default/tables/public_answers.yaml
@@ -8,3 +8,17 @@ object_relationships:
   - name: user
     using:
       foreign_key_constraint_on: user_id
+select_permissions:
+  - role: form
+    permission:
+      columns:
+        - NOTES
+        - answer_id
+        - board_id
+        - question_id
+        - SCORE
+        - user_id
+        - data
+        - created_at
+        - updated_at
+      filter: {}
